
FEATURE  Display number of ROMs in launcher.

FEATURE  Platform icons/clearlogos in AEL. Platform icons can be an icon of the console or gamepad.
         EmulationStation has a lot of material that can be reused for AEL.

FEATURE  Improved No-Intro audit.

FEATURE  Remove No-Intro Added status.

FEATURE  New style Parent/Clone launchers, ala Advanced MAME Launcher.

WIP      Split Launcher report into statistics, metadata and asset reports.

FIX      Fixed crash when editing Collection ROM position.

WIP      Keep order when Collection ROM is relinked.


[B]Advanced Emulator Launcher | version 0.9.5 | 12 January 2017[/B]

FIX      Fix ROM Collection exporting/importing.

FIX      Properly remove HTML tags in MobyGames metadata scraper plot.

FIX      ROM substitution keywords now use $ instead of the ugly %.
         %rom% becomes $rom$

FIX      Added new argument substitution keywords $rombasenoext$, $categoryID$, $launcherID$,
         and $romID$.

FIX      Fixed issues #31 and #32 (FileName class related stuff). This should fix also
         "Edit Launcher" -> "Manage ROMs" -> "Scan for local artwork/assets"

FIX      Fixed error in the ROM scanner when using semi-automatic scraping.


[B]Advanced Emulator Launcher | version 0.9.5~beta2 | 27 December 2016[/B]

FIX      Fixed crash when scanning ROMs and the asset scraper is ON.

FIX      Improved ROM scanner debug output. Will make it easier to read scanner logs.

FIX      Fixed crash in "Edit Launcher" -> "Manage ROM List" -> "Rescan ROMs local assets"
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2479446#pid2479446

FIX      Fixed crash when adding single ROM.
         http://forum.kodi.tv/showthread.php?tid=287826&pid=2484522#pid2484522

FIX      Fixed several uses of old function misc_split_path(). Now FileName() class must be used.


[B]Advanced Emulator Launcher | version 0.9.5~beta1 | 13 December 2016[/B]

FEATURE  New Arcade Database online metadata/asset scraper for MAME ROMs.
